--- a/src/App.css
+++ b/src/App.css
@@ -10,21 +10,21 @@ header{
   align-items: center;
   border: 1px solid black;
   padding: 10px;
-  width: 200px;
+  width: 300px;
   height: 50vh;
   margin: 15px;
 }
 
-span{
+.containerCarrinho{
   display: flex;
   margin-bottom: 20px;
-  
 }
 
 h2{
   margin:20px;
 }
-span>p{
+.containerCarrinho>p{
+  display: inline-flex;
   margin-right: 10px;
 }
 button{
