--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,8 @@ h2{
   margin-right: 10px;
 }
 button{
-  padding-right: 2px;
-  padding-left: 2px;
+  padding-right: 3px;
+  padding-left: 3px;
+  height: 25px;
 }
 /* CARRINHO ^^-------------------------- */
