--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,70 @@
-
-*{
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400&display=swap");
+* {
   margin: 0%;
   padding: 0%;
+  font-family: "Montserrat";
+  box-sizing: border-box;
 }
+
+/* PÁGINA vv-------------------------- */
+.page-container {
+  position: relative;
+}
+
+.background {
+  opacity: 0.8;
+}
+
+/* PÁGINA ^^-------------------------- */
+
+/* LOGO vv-------------------------- */
+.logo-img{
+  width: 200px;
+  margin: 0px;
+}
+/* LOGO ^^-------------------------- */
+
+
 /* CARRINHO vv-------------------------- */
-header{
+header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 1px solid black;
+  box-shadow: 1px 5px 5px 1px rgb(175, 172, 172);
   padding: 10px;
   width: 250px;
   height: 90vh;
   margin: 10px;
 }
 
-.containerCarrinho{
+.containerCarrinho {
   display: flex;
   margin-bottom: 20px;
 }
 
-h2{
-  margin:20px;
+h2 {
+  margin: 20px;
 }
-.containerCarrinho>p{
+.containerCarrinho > p {
   display: inline-flex;
   margin-right: 10px;
 }
-button{
+button {
   padding-right: 2px;
   padding-left: 2px;
 }
 /* CARRINHO ^^-------------------------- */
+
+
+/* FOOTER vv-------------------------- */
+.footer img {
+  width: 40px;
+  height: 40px;
+  margin: 3px;
+}
+
+/* FOOTER ^^-------------------------- */
+
+
+
+
