--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,14 @@
 /* PÁGINA vv-------------------------- */
 .page-container {
   position: relative;
+  height: 105vh;
+  
 }
+::-webkit-scrollbar{
+  background-color: rgba(255, 254, 192, 0.938);
+  background-image: linear-gradient( to bottom, rgba(255, 254, 192) 25% , rgb(253, 148, 222))
+}
+
 
 .background {
   opacity: 0.8;
@@ -55,6 +62,11 @@ button{
   padding-right: 3px;
   padding-left: 3px;
   height: 25px;
+  background-color: rgba(175, 172, 172, 0);
+  border-color:gray ;
+  box-shadow:1px 3px 3px 1px rgba(170, 162, 165, 0.418);
+  border-radius: 5px;
+  margin: 4px;
 
 }
 /* CARRINHO ^^-------------------------- */
