--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,19 @@
   box-sizing: border-box;
 }
 
+/* FILTRO vv-------------------------- */
+
+.filtro-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* border: 1px solid black; */
+}
+
+/* FILTRO ^^-------------------------- */
+
+
 /* PÁGINA vv-------------------------- */
 .page-container {
   position: relative;
@@ -19,7 +32,7 @@
 
 
 .background {
-  opacity: 0.8;
+  opacity: 0.7;
 }
 
 /* PÁGINA ^^-------------------------- */
@@ -40,7 +53,7 @@ header {
   box-shadow: 1px 5px 5px 1px rgb(175, 172, 172);
   padding: 10px;
   width: 250px;
-  height: 90vh;
+  height: 100%;
   margin: 10px;
 }
 
