adicionei botao de limpar carrinho

--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@
 
 
 /* CARRINHO vv-------------------------- */
-header {
+.carrinho-section {
   display: flex;
   flex-direction: column;
   align-items: center;
